# RecoverySys

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  TESTING.md  app.py
.claude/: settings.local.json
.github/workflows/: check.yml  deploy.yml  test.yml
RecoverySys/: .gitignore  .prettierignore  CHANGELOG.md  DESIGN.md  DESKTOP.md  README.md  ROADMAP.md  TODOS.md  eslint.config.js  index.html  package-lock.json  package.json  parts-schema.json  playwright.config.js  vite.config.js  vitest.config.js
RecoverySys/e2e/: phase1.spec.js  phase2.spec.js
RecoverySys/engine/: pyproject.toml
RecoverySys/engine/recoverysys_engine/: ascent.py  atmosphere.py  descent.py  drag.py  main.py  montecarlo.py  schemas.py
RecoverySys/landing/: compare.html  index.html  variant-a.html  variant-c.html
RecoverySys/public/: recoverysys.rc.json.example
RecoverySys/scripts/: package-portable-macos.sh  package-portable.ps1  (+2 more)
config/: architectures.py
data/: component_loader.py  components.json
docs/: README.md  physics_reference.md
models/: component.py  deployment_event.py  recovery_bay.py  rocket.py  rocket_section.py
physics/: fos_calculator.py
recovery_config/: __init__.py  component_db.json  components.py  enums.py  example_red_ii_mary.py  physics.py
results/: results_renderer.py
screens/: screen1_architecture.py  screen2_bay_dimensions.py  screen3_section_masses.py  screen4_descent_profile.py  screen5_components.py
tests/: test_deployment_event.py  test_physics.py  test_validation.py
utils/: format.py
validation/: validator.py
(+119 files in other folders)
