[project]
name = "recoverysys-engine"
version = "0.1.0"
description = "RK45 flight simulation engine for RecoverySys"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
recoverysys-engine = "recoverysys_engine.main:run"
